--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node ./server/index.js",
     "backend": "nodemon ./server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "concurrently \" npm run backend\" \"npm run start --prefix client\""
+    "dev": "concurrently \" npm run backend\" \"npm run start --prefix client\""
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/CSKIM999/WebApp.Project#readme",
   "dependencies": {
+    "@material-ui/styles": "^4.11.5",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "concurrently": "^7.3.0",
