--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.1"
+    "mongoose": "^6.5.1",
+    "react-calendar": "^3.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
