--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "body-parser": "^1.20.0",
     "concurrently": "^7.3.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
     "react-calendar": "^3.7.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "webpack-cli": "^4.10.0"
   }
 }
