--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "./"
+  ,
   "eslintConfig": {
     "extends": [
       "react-app",
