--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "body-parser": "^1.20.0",
     "concurrently": "^7.3.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
     "react-calendar": "^3.7.0"
