--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
-    "react-calendar": "^3.7.0"
+    "react-calendar": "^3.7.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19",
