--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
     deploy:
-      runs-on: ununtu-latest 
+      runs-on: ubuntu-latest 
       steps:
         - name: Checkout
           uses: actions/checkout@v3
