--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-swipeable-views": "^0.14.0",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.4.1",
     "validator": "^13.7.0",
